modified and added files

--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -1,3 +1,17 @@
-header {
-    
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
+/* Base Reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body{
+  display:flex;
+  min-height:1093px;
+  width:1440px;
+  flex-direction:column;
+  align-items:center;
+  border:solid black;
+  margin:auto;
 }
